Fix authentication issues by using Flask.session. Use twitter screen_name in front end but twitter id in back end. Truncate user names.

--- a/celebLime/static/css/celeb.css
+++ b/celebLime/static/css/celeb.css
@@ -116,6 +116,11 @@ body > .navbar .brand {
   color: #EEEDDD;
   text-shadow: 0 1px 0 rgba(255, 255, 255, .1), 0 0 30px rgba(255, 255, 255, .125);
 }
+.navbar .manage:hover
+{
+  text-decoration: none;
+  text-shadow: 0 0 4px #cacaca;
+}
 .navbar {
   *position: relative;
   *z-index: 2;
