--- a/celebLime/static/css/index.css
+++ b/celebLime/static/css/index.css
@@ -128,7 +128,7 @@ emptyfan
 {
     opacity: 0.80;
     height: 25px;
-    margin-top: 71px;
+    margin-top: 113px;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 10px;
@@ -413,7 +413,15 @@ html body div.navbar div.navbar-inner div.container div.dropdown b.caret{
   -moz-border-radius: 2px;
   border-radius: 2px;
 }
-.rowA h2
+.row h2
+{
+   width: 100%;
+   height: 12px;
+   margin-top: -3px;
+   margin-left: 0px;
+   vertical-align: middle
+}
+.rowA h3
 {
    width: 100%;
    height: 12px;
